assignment1/src/main/d96/parser/.antlr/D96Parser.py
# Generated from c:\Users\HP\Desktop\PPL\assignment1\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'Int'", "'Void'", "'Float'", "'String'", "'Boolean'", 
                     "'Return'", "'Break'", "'Continue'", "'If'", "'Elseif'", 
                     "'Else'", "'Foreach'", "'True'", "'False'", "'Array'", 
                     "'In'", "'Null'", "'Class'", "'Val'", "'Var'", "'Constructor'", 
                     "'Destructor'", "'New'", "'By'", "'Self'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", 
                     "'='", "'!='", "'<'", "'<='", "'>'", "'>='", "'+.'", 
                     "'==.'", "'::'", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'", "'.'", "'..'", "','", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN_LITERAL", "NATURAL", "INTEGER_LIERAL", 
                      "DECIMAL", "BINARY", "OCTAL", "HEXADECIMAL", "FLOAT_LITERAL", 
                      "STRING_LITERAL", "WS", "BLOCK_COMMENT", "INT_TYPE", 
                      "VOID_TYPE", "FLOAT_TYPE", "STRING_TYPE", "BOOLEAN_TYPE", 
                      "RETURN", "BREAK", "CONTINUE", "IF", "ELSEIF", "ELSE", 
                      "FOREACH", "TRUE", "FALSE", "ARRAY", "IN", "NULL", 
                      "CLASS", "VAL", "VAR", "CONSTRUCTOR", "DESTRUCTOR", 
                      "NEW", "BY", "SELF", "ADD", "SUB", "MUL", "DIV", "MOD", 
                      "NOT", "AND", "OR", "EQUAL", "ASSIGN", "NOT_EQUAL", 
                      "LESS_THAN", "LESS_THAN_EQUAL", "GREATER_THAN", "GREATER_THAN_EQUAL", 
                      "STRING_CONCATE", "STRING_COMPARE", "STATIC_GLOBAL_DOT", 
                      "LP", "RP", "LSB", "RSB", "LCB", "RCB", "DOT", "DOUBLEDOT", 
                      "COMMA", "SEMI", "COLON", "ID", "DOLLAR_ID", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_decl = 1
    RULE_member_list = 2
    RULE_attribute_decl = 3
    RULE_attribute_decl_1 = 4
    RULE_attribute_decl_2 = 5
    RULE_attribute_testing = 6
    RULE_method_decl = 7
    RULE_parameter_list = 8
    RULE_parameter = 9
    RULE_constructor = 10
    RULE_destructor = 11
    RULE_block_statement = 12
    RULE_statement = 13
    RULE_var_const_decl_statement = 14
    RULE_assign_statement = 15
    RULE_if_statement = 16
    RULE_for_statement = 17
    RULE_break_statement = 18
    RULE_continue_statement = 19
    RULE_return_statement = 20
    RULE_method_invocate_statement = 21
    RULE_method_invocate_expression = 22
    RULE_instance_method_invocate = 23
    RULE_static_method_invocate = 24
    RULE_attribute_access = 25
    RULE_instance_attribute_access = 26
    RULE_static_attribute_access = 27
    RULE_var_const_decl_1 = 28
    RULE_var_const_decl_2 = 29
    RULE_var_const_testing = 30
    RULE_data_types = 31
    RULE_primitive_types = 32
    RULE_array_type = 33
    RULE_class_type = 34
    RULE_class_new_object = 35
    RULE_literals = 36
    RULE_identifier = 37
    RULE_index_id = 38
    RULE_expr = 39
    RULE_expr_1 = 40
    RULE_expr_2 = 41
    RULE_expr_3 = 42
    RULE_expr_4 = 43
    RULE_expr_5 = 44
    RULE_expr_6 = 45
    RULE_expr_7 = 46
    RULE_expr_8 = 47
    RULE_expr_9 = 48
    RULE_expr_10 = 49
    RULE_expr_11 = 50
    RULE_multi_dimensional_arrays = 51
    RULE_indexed_array = 52

    ruleNames =  [ "program", "class_decl", "member_list", "attribute_decl", 
                   "attribute_decl_1", "attribute_decl_2", "attribute_testing", 
                   "method_decl", "parameter_list", "parameter", "constructor", 
                   "destructor", "block_statement", "statement", "var_const_decl_statement", 
                   "assign_statement", "if_statement", "for_statement", 
                   "break_statement", "continue_statement", "return_statement", 
                   "method_invocate_statement", "method_invocate_expression", 
                   "instance_method_invocate", "static_method_invocate", 
                   "attribute_access", "instance_attribute_access", "static_attribute_access", 
                   "var_const_decl_1", "var_const_decl_2", "var_const_testing", 
                   "data_types", "primitive_types", "array_type", "class_type", 
                   "class_new_object", "literals", "identifier", "index_id", 
                   "expr", "expr_1", "expr_2", "expr_3", "expr_4", "expr_5", 
                   "expr_6", "expr_7", "expr_8", "expr_9", "expr_10", "expr_11", 
                   "multi_dimensional_arrays", "indexed_array" ]

    EOF = Token.EOF
    BOOLEAN_LITERAL=1
    NATURAL=2
    INTEGER_LIERAL=3
    DECIMAL=4
    BINARY=5
    OCTAL=6
    HEXADECIMAL=7
    FLOAT_LITERAL=8
    STRING_LITERAL=9
    WS=10
    BLOCK_COMMENT=11
    INT_TYPE=12
    VOID_TYPE=13
    FLOAT_TYPE=14
    STRING_TYPE=15
    BOOLEAN_TYPE=16
    RETURN=17
    BREAK=18
    CONTINUE=19
    IF=20
    ELSEIF=21
    ELSE=22
    FOREACH=23
    TRUE=24
    FALSE=25
    ARRAY=26
    IN=27
    NULL=28
    CLASS=29
    VAL=30
    VAR=31
    CONSTRUCTOR=32
    DESTRUCTOR=33
    NEW=34
    BY=35
    SELF=36
    ADD=37
    SUB=38
    MUL=39
    DIV=40
    MOD=41
    NOT=42
    AND=43
    OR=44
    EQUAL=45
    ASSIGN=46
    NOT_EQUAL=47
    LESS_THAN=48
    LESS_THAN_EQUAL=49
    GREATER_THAN=50
    GREATER_THAN_EQUAL=51
    STRING_CONCATE=52
    STRING_COMPARE=53
    STATIC_GLOBAL_DOT=54
    LP=55
    RP=56
    LSB=57
    RSB=58
    LCB=59
    RCB=60
    DOT=61
    DOUBLEDOT=62
    COMMA=63
    SEMI=64
    COLON=65
    ID=66
    DOLLAR_ID=67
    UNCLOSE_STRING=68
    ILLEGAL_ESCAPE=69
    ERROR_CHAR=70

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 106
                self.class_decl()
                self.state = 109 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 111
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(D96Parser.IdentifierContext,i)


        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def member_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Member_listContext)
            else:
                return self.getTypedRuleContext(D96Parser.Member_listContext,i)


        def destructor(self):
            return self.getTypedRuleContext(D96Parser.DestructorContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_decl




    def class_decl(self):

        localctx = D96Parser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(D96Parser.CLASS)
            self.state = 114
            self.identifier()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 115
                self.match(D96Parser.COLON)
                self.state = 116
                self.identifier()


            self.state = 119
            self.match(D96Parser.LCB)
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 120
                    self.member_list() 
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.DESTRUCTOR:
                self.state = 126
                self.destructor()


            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 30)) & ~0x3f) == 0 and ((1 << (_la - 30)) & ((1 << (D96Parser.VAL - 30)) | (1 << (D96Parser.VAR - 30)) | (1 << (D96Parser.CONSTRUCTOR - 30)) | (1 << (D96Parser.ID - 30)) | (1 << (D96Parser.DOLLAR_ID - 30)))) != 0):
                self.state = 129
                self.member_list()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(D96Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Member_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_decl(self):
            return self.getTypedRuleContext(D96Parser.Attribute_declContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(D96Parser.Method_declContext,0)


        def constructor(self):
            return self.getTypedRuleContext(D96Parser.ConstructorContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member_list




    def member_list(self):

        localctx = D96Parser.Member_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_member_list)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.attribute_decl()
                pass
            elif token in [D96Parser.ID, D96Parser.DOLLAR_ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.method_decl()
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.constructor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_decl_1(self):
            return self.getTypedRuleContext(D96Parser.Attribute_decl_1Context,0)


        def attribute_decl_2(self):
            return self.getTypedRuleContext(D96Parser.Attribute_decl_2Context,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute_decl




    def attribute_decl(self):

        localctx = D96Parser.Attribute_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attribute_decl)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.attribute_decl_1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.attribute_decl_2()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_decl_1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(D96Parser.IdentifierContext,i)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def data_types(self):
            return self.getTypedRuleContext(D96Parser.Data_typesContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_attribute_decl_1




    def attribute_decl_1(self):

        localctx = D96Parser.Attribute_decl_1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attribute_decl_1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 147
            self.identifier()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 148
                self.match(D96Parser.COMMA)
                self.state = 149
                self.identifier()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 155
            self.match(D96Parser.COLON)
            self.state = 156
            self.data_types()
            self.state = 157
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_decl_2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_testing(self):
            return self.getTypedRuleContext(D96Parser.Attribute_testingContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attribute_decl_2




    def attribute_decl_2(self):

        localctx = D96Parser.Attribute_decl_2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attribute_decl_2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            _la = self._input.LA(1)
            if not(_la==D96Parser.VAL or _la==D96Parser.VAR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 160
            self.attribute_testing()
            self.state = 161
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_testingContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(D96Parser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def data_types(self):
            return self.getTypedRuleContext(D96Parser.Data_typesContext,0)


        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def attribute_testing(self):
            return self.getTypedRuleContext(D96Parser.Attribute_testingContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute_testing




    def attribute_testing(self):

        localctx = D96Parser.Attribute_testingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attribute_testing)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.identifier()
                self.state = 164
                self.match(D96Parser.COLON)
                self.state = 165
                self.data_types()
                self.state = 166
                self.match(D96Parser.ASSIGN)
                self.state = 167
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.identifier()
                self.state = 170
                self.match(D96Parser.COMMA)
                self.state = 171
                self.attribute_testing()

                self.state = 172
                self.match(D96Parser.COMMA)
                self.state = 173
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(D96Parser.IdentifierContext,0)


        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def block_statement(self):
            return self.getTypedRuleContext(D96Parser.Block_statementContext,0)


        def parameter_list(self):
            return self.getTypedRuleContext(D96Parser.Parameter_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_method_decl




    def method_decl(self):

        localctx = D96Parser.Method_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_method_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.identifier()
            self.state = 178
            self.match(D96Parser.LP)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID or _la==D96Parser.DOLLAR_ID:
                self.state = 179
                self.parameter_list()


            self.state = 182
            self.match(D96Parser.RP)
            self.state = 183
            self.block_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ParameterContext)
            else:
                return self.getTypedRuleContext(D96Parser.ParameterContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.SEMI)
            else:
                return self.getToken(D96Parser.SEMI, i)

        def getRuleIndex(self):
            return D96Parser.RULE_parameter_list




    def parameter_list(self):

        localctx = D96Parser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self.parameter()
            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.SEMI:
                self.state = 186
                self.match(D96Parser.SEMI)
                self.state = 187
                self.parameter()
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)
